Get rid of Symbol and store all "static" stock information in StockInfo.

--- a/src/org/yccheok/jstock/data/gui.properties
+++ b/src/org/yccheok/jstock/data/gui.properties
@@ -243,7 +243,7 @@ DividendSummaryBarChartJDialog_Year=Year
 DividendSummaryBarChartJDialog_Dividend=Dividend
 
 StockDatabaseJDialog_NeedHelpVisit=Need help? Visit
-StockDatabaseJDialog_Description=If you cannot find your stock symbol on the Stock Exchange Server, you can add it manually to the User Defined database.
+StockDatabaseJDialog_Description=If you cannot find your stock symbol on the Stock Exchange Server, you can add it manually.
 
 InvestmentFlowChartJDialog_ReturnOfInvestment=Return of Investment(ROI)
 InvestmentFlowChartJDialog_Invest=Invest
@@ -440,7 +440,7 @@ OptionsNetworkJPanel_Example1=(e.g. 1024)
 OptionsNetworkJPanel_EnableNTLM=Enable NTLM
 OptionsNetworkJPanel_Username=Username
 OptionsNetworkJPanel_Password=Password
-NewBuyTransactionJDialog_Symbol=Symbol
+NewBuyTransactionJDialog_Symbol=Code
 NewBuyTransactionJDialog_Date=Date
 NewBuyTransactionJDialog_Unit=Unit
 NewBuyTransactionJDialog_Price=Price
